# docs/swagger.yaml
@@ -127,7 +127,7 @@ definitions:
       updated_at:
         type: string
     type: object
-  entities.SupportedRegionProposal:
+  entities.SupportedRegionSuggestion:
     properties:
       content:
         type: string
@@ -337,7 +337,7 @@ definitions:
     - campaign_id
     - description
     type: object
-  request.CreateSupportedRegionProposalsRequest:
+  request.CreateSupportedRegionSuggestionsRequest:
     properties:
       content:
         type: string
@@ -2771,14 +2771,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/request.CreateSupportedRegionProposalsRequest'
+          $ref: '#/definitions/request.CreateSupportedRegionSuggestionsRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/entities.SupportedRegionProposal'
+            $ref: '#/definitions/entities.SupportedRegionSuggestion'
         "400":
           description: Invalid data. Please try again.
           schema:
@@ -2814,7 +2814,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entities.SupportedRegionProposal'
+            $ref: '#/definitions/entities.SupportedRegionSuggestion'
         "400":
           description: Invalid data. Please try again.
           schema:
