# model/entities/region.go
@@ -2,12 +2,14 @@ package entities
 
 import "time"
 
-type SupportedRegionProposal struct {
-	ID        string
-	Sub       string
-	Region    string
-	Content   string
-	CreatedBy string
-	CreatedAt time.Time
-	UpdatedAt time.Time
+type SupportedRegionSuggestion struct {
+	ID         string
+	ProfileID  string
+	Region     string
+	Content    string
+	Status     string
+	CreatedBy  string
+	ReviewedBy *string
+	CreatedAt  time.Time
+	UpdatedAt  time.Time
 }
